force-app/main/default/objects/Milestone1_Project__c/fields/BD_Account__c.field-meta.xml
<CustomField>
    <fullName>BD_Account__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>