force-app/main/default/objects/Milestone1_Project__c/fields/Board_Dates__c.field-meta.xml
<CustomField>
    <fullName>Board_Dates__c</fullName>
    <description>List of Board meetings for the term of the engagement</description>
    <label>Board Dates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>