force-app/main/default/objects/Milestone1_Project__c/fields/Board_Offsite_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Offsite_Date__c</fullName>
    <label>Board / Offsite Date</label>
    <type>Date</type>
</CustomField>