force-app/main/default/objects/Milestone1_Project__c/fields/Coaching_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Expiry_Date__c</fullName>
    <label>Coaching Expiry Date</label>
    <type>Date</type>
</CustomField>