force-app/main/default/objects/Milestone1_Project__c/fields/Contract_Rcvd_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rcvd_Formula__c</fullName>
    <formula>IF(Contract_Received__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Rcvd Formula</label>
    <type>Text</type>
</CustomField>