force-app/main/default/objects/Milestone1_Project__c/fields/Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if contract has been received</inlineHelpText>
    <label>Contract Received</label>
    <type>Checkbox</type>
</CustomField>