force-app/main/default/objects/Milestone1_Project__c/fields/Curriculum__c.field-meta.xml
<CustomField>
    <fullName>Curriculum__c</fullName>
    <label>Curriculum</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Performance General Management</fullName>
            </value>
            <value>
                <fullName>People / Team Leadership</fullName>
            </value>
            <value>
                <fullName>Matrix Leadership</fullName>
            </value>
            <value>
                <fullName>Critical ONTRACK Focus Areas</fullName>
            </value>
            <value>
                <fullName>Identified Areas for Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>