force-app/main/default/objects/Milestone1_Project__c/fields/Huddle__c.field-meta.xml
<CustomField>
    <fullName>Huddle__c</fullName>
    <description>Date of the project huddle call</description>
    <label>Huddle</label>
    <type>Date</type>
</CustomField>