force-app/main/default/objects/Milestone1_Project__c/fields/Includes_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Includes_Coaching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Coaching</label>
    <type>Checkbox</type>
</CustomField>