force-app/main/default/objects/Milestone1_Project__c/fields/Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact__c</fullName>
    <formula>Opportunity__r.Lead_Contact_Source__r.FirstName &amp;&quot; &quot;&amp; Opportunity__r.Lead_Contact_Source__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Contact</label>
    <type>Text</type>
</CustomField>