force-app/main/default/objects/Milestone1_Project__c/fields/Length_of_In_Person_Session__c.field-meta.xml
<CustomField>
    <fullName>Length_of_In_Person_Session__c</fullName>
    <label>Length of In Person Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>