force-app/main/default/objects/Milestone1_Project__c/fields/Length_of_Phone_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Phone_Sessions__c</fullName>
    <label>Length of Phone Sessions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>