force-app/main/default/objects/Milestone1_Project__c/fields/No_Monthly_Project_Update__c.field-meta.xml
<CustomField>
    <fullName>No_Monthly_Project_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether or not the Conga Conductor sends an email to Cavan/Josh at the beginning of the month</description>
    <label>No Monthly Project Update</label>
    <type>Checkbox</type>
</CustomField>