force-app/main/default/objects/Milestone1_Project__c/fields/Number_of_in_persons__c.field-meta.xml
<CustomField>
    <fullName>Number_of_in_persons__c</fullName>
    <description>Number of in-person meetings required to fulfill the contract</description>
    <label>Number of in-persons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>When practical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>