force-app/main/default/objects/Milestone1_Project__c/fields/Participant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Participant_Contact__c</fullName>
    <formula>Opportunity__r.Participant_Contact__r.FirstName &amp;&quot; &quot;&amp; Opportunity__r.Participant_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Contact</label>
    <type>Text</type>
</CustomField>