force-app/main/default/objects/Milestone1_Project__c/fields/Project_Wizard__c.field-meta.xml
<CustomField>
    <fullName>Project_Wizard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Wizard</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Miles Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>