force-app/main/default/objects/Milestone1_Project__c/fields/Project_Wizard_Formula__c.field-meta.xml
<CustomField>
    <fullName>Project_Wizard_Formula__c</fullName>
    <formula>Project_Wizard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Wizard Formula</label>
    <type>Text</type>
</CustomField>