force-app/main/default/objects/Milestone1_Project__c/fields/Rhythm__c.field-meta.xml
<CustomField>
    <fullName>Rhythm__c</fullName>
    <description>Cadence of calls/meetings</description>
    <label>Rhythm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>See description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>