force-app/main/default/objects/Milestone1_Project__c/fields/Session_type__c.field-meta.xml
<CustomField>
    <fullName>Session_type__c</fullName>
    <label>Session type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Combination (phone, video &amp; in-person)</fullName>
            </value>
            <value>
                <fullName>In-person</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>