force-app/main/default/objects/Milestone1_Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Submitted&quot;</defaultValue>
    <inlineHelpText>The current status of the project.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed/Won</fullName>
            </value>
            <value>
                <fullName>Closed/Lost</fullName>
            </value>
            <value>
                <fullName>ADMIN ONLY</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved / Planning (95%)</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Non-billable</fullName>
                <isActive>false</isActive>
                <label>Non-billable</label>
            </value>
            <value>
                <fullName>Planning</fullName>
                <isActive>false</isActive>
                <label>Planning</label>
            </value>
            <value>
                <fullName>To Be Submitted</fullName>
                <isActive>false</isActive>
                <label>To Be Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>