force-app/main/default/objects/Milestone1_Project__c/fields/Team_Offsite__c.field-meta.xml
<CustomField>
    <fullName>Team_Offsite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked if there is a team offsite deliverable in contract (or stated otherwise by the PW)</description>
    <inlineHelpText>Please check if there is a team offsite deliverable in the contract</inlineHelpText>
    <label>Team Offsite</label>
    <type>Checkbox</type>
</CustomField>