force-app/main/default/objects/Milestone1_Project__c/fields/TMG_Active__c.field-meta.xml
<CustomField>
    <fullName>TMG_Active__c</fullName>
    <formula>IF(
AND(
 (Template__c = FALSE),NOT(ISPICKVAL(Status__c, &quot;Inactive&quot;)), NOT(ISPICKVAL(Status__c, &quot;Completed&quot;)), RecordTypeId  &lt;&gt; &quot;0122A000001USlw&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>