force-app/main/default/objects/Milestone1_Project__c/fields/TMG_Conga_All_Hands_Report__c.field-meta.xml
<CustomField>
    <fullName>TMG_Conga_All_Hands_Report__c</fullName>
    <description>00OF00000066JLS report ID original</description>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[Heatmap]00O2A0000077HLh?pv0=&quot;+ 
&quot;&amp;templateid=a0I2A00000al0Pm&quot; + 
&quot;&amp;ofn=TMG Project Tracking&quot; + 
&quot;&amp;emailsubject=TMG Project Tracking&quot; + 
&quot;&amp;EmailFromID=0D22A000000bly7&quot; + 
&quot;&amp;emailadditionalto=cjones@miles-group.com&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>TMG Conga All Hands Report</label>
    <type>Text</type>
</CustomField>