force-app/main/default/objects/Milestone1_Project__c/fields/TMG_Conga_Heat_Map__c.field-meta.xml
<CustomField>
    <fullName>TMG_Conga_Heat_Map__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[Heatmap]00O2A0000077HLh?pv0=&quot; + 
&quot;&amp;templateid=a0I2A00000al0Pm&quot; + 
&quot;&amp;ofn=Heat Map&quot; + 
&quot;&amp;emailsubject=Heat Map&quot; + 
&quot;&amp;EmailFromID=0D22A000000bly7&quot; + 
&quot;&amp;emailadditionalto=cjones@miles-group.com&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>TMG Conga Heat Map</label>
    <type>Text</type>
</CustomField>