force-app/main/default/objects/Milestone1_Project__c/fields/TMG_Conga_Last_Coaching_Session_Next_30__c.field-meta.xml
<CustomField>
    <fullName>TMG_Conga_Last_Coaching_Session_Next_30__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[Coaching]00O2A0000077n2A?pv0=&quot; + 
&quot;&amp;templateid=a0I2A00000aV9nF&quot; + 
&quot;&amp;ofn=Last Coaching Sessions Next 30 Days&quot; + 
&quot;&amp;emailsubject=Last Coaching Sessions Next 30 Days&quot; + 
&quot;&amp;EmailFromID=0D22A000000bly7&quot; + 
&quot;&amp;emailadditionalto=jdifalco@miles-group.com, cjones@miles-group.com, jstoe@miles-group.com&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG Conga Last Coaching Session Next 30</label>
    <type>Text</type>
</CustomField>