force-app/main/default/objects/Milestone1_Project__c/fields/TMG_End_of_Month_Report__c.field-meta.xml
<CustomField>
    <fullName>TMG_End_of_Month_Report__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[EOMProjects]00O2A000007YSYo?pv0=, [EOMOpps30]00O2A000007YVOr?pv0=, [EOMProj30]00O2A000007YVOm?pv0=, [EOMOpps]00O2A000007YVOw?pv0=, [EOMLA]00O2A000007YVcU?pv0=, [EOMRecentContract]00O2A0000077ERN?pv0=&quot; + 
&quot;&amp;templateid=a0I2A00000Z2DpS&quot; + 
&quot;&amp;ofn=End of the Month Report&quot; + 
&quot;&amp;emailsubject=End of the Month Report&quot; +
&quot;&amp;EmailFromID=0D22A000000bly7&quot; +
&quot;&amp;emailadditionalto=cjones@miles-group.com, jdifalco@miles-group.com&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG End of Month Report</label>
    <type>Text</type>
</CustomField>