force-app/main/default/objects/Milestone1_Project__c/fields/TMG_Second_to_Last_Coaching_next_2_wks__c.field-meta.xml
<CustomField>
    <fullName>TMG_Second_to_Last_Coaching_next_2_wks__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[Coaching]00O3k000007o0fd?pv0=&quot; +
&quot;&amp;templateid=a0I3k00000bj1GX&quot; +
&quot;&amp;ofn=Second-to-Last Coaching Sessions Next 2 Weeks&quot; +
&quot;&amp;emailsubject=Second-to-Last Coaching Sessions Next 2 Weeks&quot; +
&quot;&amp;EmailFromID=0D22A000000bly7&quot; +
&quot;&amp;emailadditionalto=jdifalco@miles-group.com, cjones@miles-group.com&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG Second-to-Last Coaching next 2 wks</label>
    <type>Text</type>
</CustomField>