force-app/main/default/objects/Milestone1_Project__c/fields/TMG_WAAG_AO__c.field-meta.xml
<CustomField>
    <fullName>TMG_WAAG_AO__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[DC]00O2A0000077Yd4?pv0=, [BOARD]00O2A0000077YdO?pv0=, [FB]00O2A0000077Ycu?pv0=, [DB]00O2A0000077Yd9?pv0=, [INT]00O2A0000077Yck?pv0=,[BD]00O2A0000077YdT?pv0=, [Internal]00O2A0000077Ycf?pv0=, [Coaching]00O2A0000077YdJ?pv0=&quot; + 
&quot;&amp;congaemailtemplateid=aA82A000000PBrn&quot; + 
&quot;&amp;emailfromID=0D22A000000bly7&quot; + 
&quot;&amp;emailtoID=0052A000009LNco&quot; + 
&quot;&amp;emailCC=mbalensiefer@miles-group.com&quot; + 
&quot;&amp;ofn=Upcoming Tasks&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG WAAG AO</label>
    <type>Text</type>
</CustomField>