force-app/main/default/objects/Milestone1_Project__c/fields/TMG_WAAG_CH__c.field-meta.xml
<CustomField>
    <fullName>TMG_WAAG_CH__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[DC]00O2A000007YeEX?pv0=, [BOARD]00O2A000007YeCv?pv0=, [FB]00O2A000007YeDK?pv0=, [DB]00O2A000007YeFG?pv0=, [INT]00O2A000007YeDy?pv0=,[BD]00O2A000007YeGJ?pv0=, [Internal]00O2A000007YeCW?pv0=, [Coaching]00O2A000007YeFp?pv0=&quot; + 
&quot;&amp;congaemailtemplateid=aA82A000000L0WT&quot; + 
&quot;&amp;emailfromID=0D22A000000bly7&quot; + 
&quot;&amp;emailtoID=005F0000002tkLh&quot; + 
&quot;&amp;emailCC=gkunst@miles-group.com, jstoe@miles-group.com&quot; + 
&quot;&amp;ofn=Upcoming Tasks&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>TMG WAAG CH</label>
    <type>Text</type>
</CustomField>