force-app/main/default/objects/Milestone1_Project__c/fields/TMG_WAAG_EH__c.field-meta.xml
<CustomField>
    <fullName>TMG_WAAG_EH__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[DC]00O3k000007nvT4?pv0=, [BOARD]00O3k000007nvTT?pv0=, [FB]00O3k000007nvUM?pv0=, [DB]00O3k000007nvU2?pv0=, [INT]00O3k000007nvUb?pv0=,[BD]00O3k000007nvSf?pv0=, [Internal]00O3k000007nvTE?pv0=, [Coaching]00O3k000007nvTi?pv0=&quot; +
&quot;&amp;congaemailtemplateid=aA83k000000TO9C&quot; +
&quot;&amp;emailfromID=0D22A000000bly7&quot; +
&quot;&amp;emailtoID=0053k000009sRT9&quot; +
&quot;&amp;emailCC=gkunst@miles-group.com, jstoe@miles-group.com&quot; +
&quot;&amp;ofn=Upcoming Tasks&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG WAAG EH</label>
    <type>Text</type>
</CustomField>