force-app/main/default/objects/Milestone1_Project__c/fields/TMG_WAAG_EK__c.field-meta.xml
<CustomField>
    <fullName>TMG_WAAG_EK__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[DC]00O2A000007YeBJ?pv0=, [BOARD]00O2A000007YeHC?pv0=, [FB]00O2A000007YeFL?pv0=, [DB]00O2A000007YeDj?pv0=, [INT]00O2A000007YeCH?pv0=,[BD]00O2A000007YeI5?pv0=, [Internal]00O2A000007YeIZ?pv0=, [Coaching]00O2A000007YeGO?pv0=&quot; + 
&quot;&amp;congaemailtemplateid=aA82A000000L0Wi&quot; + 
&quot;&amp;emailfromID=0D22A000000bly7&quot; + 
&quot;&amp;emailtoID=0052A0000095dKv&quot; + 
&quot;&amp;emailCC=tsavard@miles-group.com&quot; + 
&quot;&amp;ofn=Upcoming Tasks&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>TMG WAAG EK</label>
    <type>Text</type>
</CustomField>