force-app/main/default/objects/Milestone1_Project__c/fields/TMG_WAAG_JN__c.field-meta.xml
<CustomField>
    <fullName>TMG_WAAG_JN__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[DC]00O2A000007YeB4?pv0=, [BOARD]00O2A000007YeH7?pv0=, [FB]00O2A000007YeF1?pv0=, [DB]00O2A000007YeDZ?pv0=, [INT]00O2A000007YeC7?pv0=,[BD]00O2A000007YeHv?pv0=, [Internal]00O2A000007YeIU?pv0=, [Coaching]00O2A000007YeGE?pv0=&quot; + 
&quot;&amp;congaemailtemplateid=aA82A000000L0Wn&quot; + 
&quot;&amp;emailfromID=0D22A000000bly7&quot; +
&quot;&amp;emailtoID=005F0000005tXxH&quot; + 
&quot;&amp;emailCC=mbalensiefer@miles-group.com, jstoe@miles-group.com&quot; +
&quot;&amp;ofn=Upcoming Tasks&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>TMG WAAG JN</label>
    <type>Text</type>
</CustomField>