force-app/main/default/objects/Milestone1_Project__c/fields/TMG_WAAG_MB__c.field-meta.xml
<CustomField>
    <fullName>TMG_WAAG_MB__c</fullName>
    <description>##Conga updated button:00b2A000001SQw9</description>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[DC]00O2A000007YdrE?pv0=, [BOARD]00O2A000007Yds2?pv0=, [FB]00O2A000007Ydrx?pv0=, [DB]00O2A000007Ydrn?pv0=, [INT]00O2A000007Ydri?pv0=,[BD]00O2A000007YdrO?pv0=, [Internal]00O2A000007YdrT?pv0=, [Coaching]00O2A000007YdrY?pv0=&quot; + 
&quot;&amp;congaemailtemplateid=aA82A000000L0WJ&quot; + 
&quot;&amp;emailfromID=0D22A000000bly7&quot; +
&quot;&amp;emailtoID=005F0000003iIek&quot; + 
&quot;&amp;emailCC=gkunst@miles-group.com&quot; +
&quot;&amp;ofn=Upcoming Tasks&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>TMG WAAG MB</label>
    <type>Text</type>
</CustomField>