force-app/main/default/objects/Milestone1_Project__c/fields/TMG_WAAG_SL__c.field-meta.xml
<CustomField>
    <fullName>TMG_WAAG_SL__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[DC]00O2A000007YeBT?pv0=, [BOARD]00O2A000007YeHM?pv0=, [FB]00O2A000007YeFB?pv0=, [DB]00O2A000007YeDt?pv0=, [INT]00O2A000007YeCR?pv0=,[BD]00O2A000007YeI0?pv0=, [Internal]00O2A000007YeIe?pv0=, [Coaching]00O2A000007YeGY?pv0=&quot; + 
&quot;&amp;congaemailtemplateid=aA82A000000L0X7&quot; + 
&quot;&amp;emailfromID=0D22A000000bly7&quot; + 
&quot;&amp;emailtoID=0052A000007vFcE&quot; + 
&quot;&amp;emailCC=bkirk@miles-group.com&quot; + 
&quot;&amp;ofn=Upcoming Tasks&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>TMG WAAG SL</label>
    <type>Text</type>
</CustomField>