force-app/main/default/objects/Milestone1_Project__c/fields/TMG_WAAG_SM__c.field-meta.xml
<CustomField>
    <fullName>TMG_WAAG_SM__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[DC]00O2A000007YeF6?pv0=, [BOARD]00O2A000007YeDA?pv0=, [FB]00O2A000007YeDe?pv0=, [DB]00O2A000007YeFa?pv0=, [INT]00O2A000007YeEN?pv0=,[BD]00O2A000007YeGd?pv0=, [Internal]00O2A000007YeCg?pv0=, [Coaching]00O2A000007YeG4?pv0=&quot; + 
&quot;&amp;congaemailtemplateid=aA82A000000L0Wd&quot; + 
&quot;&amp;emailfromID=0D22A000000bly7&quot; + 
&quot;&amp;emailtoID=005F0000002tkLl&quot; + 
&quot;&amp;emailCC=rwilliams@miles-group.com; jstoe@miles-group.com&quot; +
&quot;&amp;ofn=Upcoming Tasks&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>TMG WAAG SM</label>
    <type>Text</type>
</CustomField>