force-app/main/default/objects/Milestone1_Project__c/fields/TMG_WAAG_TA__c.field-meta.xml
<CustomField>
    <fullName>TMG_WAAG_TA__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[DC]00O2A000007YeBd?pv0=, [BOARD]00O2A000007YeHR?pv0=, [FB]00O2A000007YeFk?pv0=, [DB]00O2A000007YeE8?pv0=, [INT]00O2A000007YeCb?pv0=,[BD]00O2A000007YeIA?pv0=, [Internal]00O2A000007YeIj?pv0=, [Coaching]00O2A000007YeGn?pv0=&quot; + 
&quot;&amp;congaemailtemplateid=aA82A000000L0X2&quot; + 
&quot;&amp;emailfromID=0D22A000000bly7&quot; + 
&quot;&amp;emailtoID=0052A000008Mg8p&quot; + 
&quot;&amp;emailCC=mbalensiefer@miles-group.com&quot; + 
&quot;&amp;ofn=Upcoming Tasks&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>TMG WAAG TA</label>
    <type>Text</type>
</CustomField>